arch: arm: configs: Use 64-bit binder API
IPC_32BIT originally was intended to be used on 4.4 and older userspaces,
because they didn't support new API and 64-bit pointers, but then it was
forced on 32-bit platforms because ARM didn't have essential 64-bit get_user() calls.
The main limitation of this option is that it is incompatible with new API,
so kernel and userspace should have same binder version to work properly.
Necessary calls were later introduced in commit "ARM: 8091/2: add get_user() support for 8 byte types"
and now AOSP and mainline are going towards removing old 32-bit binder API support.
64-bit binder is 100% compatible with 32-bit kernel and userspace,
so there is no reason for us to keep using the old solution anymore.

Change-Id: I91ce91a1a17ceb7110184657663e957bd8793d3f
Signed-off-by: OrdenKrieger <OrdenKriegerEDR@googlemail.com>

--- a/arch/arm/configs/cyanogenmod_k9_defconfig
+++ b/arch/arm/configs/cyanogenmod_k9_defconfig
@@ -547,6 +547,7 @@ CONFIG_UIO_MSM_SHAREDMEM=y
 CONFIG_STAGING=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
+# CONFIG_ANDROID_BINDER_IPC_32BIT is not set
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_LOGGER=y
 CONFIG_ANDROID_RAM_CONSOLE=y
@@ -627,8 +628,6 @@ CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_DEV_QCRYPTO=y
 CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
-<<<<<<< HEAD
-=======
 # CONFIG_CRYPTO_DEV_OTA_CRYPTO is not set
 CONFIG_BINARY_PRINTF=y
 
@@ -684,4 +683,3 @@ CONFIG_QMI_ENCDEC=y
 # Chroma-Reborn
 
 CONFIG_CPU_VOLTAGE_TABLE=y
->>>>>>> 2cf30de... feature(configs): enable voltage table for testing
