quick charge 2.0 , superfast fingerprint unlock,camera.sound fixes
finally quick charge 2 works on this device

--- a/arch/arm/boot/dts/msm8974-k9-camera.dtsi
+++ b/arch/arm/boot/dts/msm8974-k9-camera.dtsi
@@ -13,29 +13,31 @@
 
 /* Change the CCI speed from 100khz to 400khz */
 &master0 {
-	qcom,hw-thigh = <20>;
-	qcom,hw-tlow = <28>;
-	qcom,hw-tsu-sto = <6>;
-	qcom,hw-tsu-sta = <7>;
-	qcom,hw-thd-dat = <13>;
-	qcom,hw-thd-sta = <11>;
-	qcom,hw-tbuf = <25>;
+	qcom,hw-thigh = <16>;
+	qcom,hw-tlow = <22>;
+	qcom,hw-tsu-sto = <17>;
+	qcom,hw-tsu-sta = <18>;
+	qcom,hw-thd-dat = <16>;
+	qcom,hw-thd-sta = <15>;
+	qcom,hw-tbuf = <19>;
 	qcom,hw-scl-stretch-en = <1>;
-	qcom,hw-trdhld = <6>;
+	qcom,hw-trdhld = <3>;
 	qcom,hw-tsp = <3>;
+	qcom,cci-clk-src = <40000000>;
 	status = "ok";
 };
 
 &master1 {
-	qcom,hw-thigh = <20>;
-	qcom,hw-tlow = <28>;
-	qcom,hw-tsu-sto = <6>;
-	qcom,hw-tsu-sta = <7>;
-	qcom,hw-thd-dat = <13>;
-	qcom,hw-thd-sta = <11>;
-	qcom,hw-tbuf = <25>;
-	qcom,hw-scl-stretch-en = <0>;
-	qcom,hw-trdhld = <6>;
+	qcom,hw-thigh = <16>;
+	qcom,hw-tlow = <22>;
+	qcom,hw-tsu-sto = <17>;
+	qcom,hw-tsu-sta = <18>;
+	qcom,hw-thd-dat = <16>;
+	qcom,hw-thd-sta = <15>;
+	qcom,hw-tbuf = <19>;
+	qcom,hw-scl-stretch-en = <1>;
+	qcom,hw-trdhld = <3>;
 	qcom,hw-tsp = <3>;
+	qcom,cci-clk-src = <40000000>;
 	status = "ok";
 };
