--- a/arch/arm/boot/dts/msm8974-k9-keys.dtsi
+++ b/arch/arm/boot/dts/msm8974-k9-keys.dtsi
@@ -57,6 +57,7 @@
 			fpc,gpio_reset = <33>;
 			fpc,gpio_cs  = <25>;
 			fpc,enable-wakeup;
+			fpc,vddtx_mv;
 			vdd_ana-supply = <&spi_eth_vreg>;
 			vdd_io-supply = <&spi_eth_vreg>;
 		};
