--- a/radioactive_defconfig
+++ b/radioactive_defconfig
@@ -2589,6 +2589,7 @@ CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
 CONFIG_SND_SOC_WCD9320=y
 CONFIG_SND_SOC_MSM_STUB=y
+CONFIG_NXP_TFA98xx=y
 CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 # CONFIG_SOUND_PRIME is not set
